--- a/TrainingCurriculum/css/app.css
+++ b/TrainingCurriculum/css/app.css
@@ -3,57 +3,56 @@
   Copyright: 2015
   CMD: sass --watch app.scss:../../TrainingCurriculum/css/app.css --style compressed
 */
-
-// Import required sass files.
-@import 'colors';
-@import 'mixins';
-
-// Class selectors.
+/*
+  Author: Allen Communication Learning Services
+  Copyright: 2015
+  Owner: app.scss
+  CMD: sass --watch app.scss:../../TrainingCurriculum/css/app.css --style compressed
+*/
+/*
+  Author: Allen Communication Learning Services
+  Copyright: 2015
+  Owner: app.scss
+  CMD: sass --watch app.scss:../../TrainingCurriculum/css/app.css --style compressed
+*/
 .alert {
-  margin: 15px 0 !important;
-}
+  margin: 15px 0 !important; }
 
 .modal-body .alert {
-  margin: 15px 0 0 0 !important;
-}
+  margin: 15px 0 0 0 !important; }
 
 .inline-block {
-  display: inline-block;
-}
+  display: inline-block; }
 
 .login-message {
   color: #ff0000;
-  font-weight: bold;
-}
+  font-weight: bold; }
 
 .none {
-  display: none !important;
-}
+  display: none !important; }
 
 .phase-header {
-  background-color: $g-orange-secondary;
+  background-color: #f5e0d1;
   border: none;
-  border-bottom: 2px solid $g-orange-highlight;
-  color: $t-orange-main;
+  border-bottom: 2px solid #d46127;
+  color: #d46127;
   padding: 5px 10px;
-  width: 100%;
-}
+  width: 100%; }
 
 .table-training {
-  margin-bottom: 0 !important;
-}
+  margin-bottom: 0 !important; }
 
 .training-section {
   height: 200px;
   overflow-x: hidden;
   overflow-y: hidden;
   width: 100%;
-  margin-bottom: 5px;
-
-  &.transition {
-    @include transition(height, 1s);
-  }
-}
+  margin-bottom: 5px; }
+  .training-section.transition {
+    -webkit-transition: height 1s;
+    -moz-transition: height 1s;
+    -o-transition: height 1s;
+    transition: height 1s; }
 
 .view-more, .view-less {
   color: #000;
@@ -61,26 +60,20 @@
   margin-bottom: 20px;
   text-align: center;
   text-decoration: none;
-  width: 100%;
+  width: 100%; }
+  .view-more:hover, .view-less:hover {
+    text-decoration: underline; }
 
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
-// ID selectors.
 #allencommLogo {
   height: 36px;
   left: 7px;
   position: absolute;
   top: 7px;
-  width: 36px;
-}
+  width: 36px; }
 
 #main {
   margin-top: 60px;
-  width: 100%;
-}
+  width: 100%; }
 
 #preloadContainer {
   background-color: rgba(0, 0, 0, 0.5);
@@ -88,22 +81,18 @@
   left: 0;
   position: fixed;
   top: 0;
-  width: 100%;
-}
+  width: 100%; }
 
 #preloader {
   left: 50%;
   margin: -30px 0 0 -30px;
   position: absolute;
-  top: 50%;
-}
+  top: 50%; }
 
-// Tag selectors.
 a, article, button, div, footer, h1, h2, h3, h4, h5, h6, header, input, label, legend, p, section, select, textarea {
   display: block;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 body {
   cursor: default;
@@ -111,69 +100,54 @@ body {
   font-size: 14px;
   line-height: 1.2em;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 button {
-  padding: 2px 5px;
-}
+  padding: 2px 5px; }
 
-fieldset {
-  input, select {
-    margin-bottom: 10px;
-  }
-}
+fieldset input, fieldset select {
+  margin-bottom: 10px; }
 
 form {
   left: 50%;
   margin-left: -250px;
   position: relative;
-  width: 500px;
-}
+  width: 500px; }
 
 h1 {
   font-size: 20px;
   font-weight: normal;
-  margin-bottom: 5px;
-}
+  margin-bottom: 5px; }
 
 header {
-  background-color: $g-orange-main;
+  background-color: #f37522;
   box-shadow: 0 0 10px #666;
   height: 50px;
   left: 0;
   position: fixed;
   top: 0;
-  width: 100%;
-
-  nav {
+  width: 100%; }
+  header nav {
     left: 55px;
     position: absolute;
-    top: 0;
-  }
-}
+    top: 0; }
 
 nav {
   display: table;
-  height: 100%;
-
-  a {
+  height: 100%; }
+  nav a {
     color: #fff;
     display: table-cell;
     font-size: 16px;
     text-decoration: none;
-    vertical-align: middle;
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-}
+    vertical-align: middle; }
+    nav a:hover {
+      text-decoration: underline; }
 
 @media screen and (max-width: 500px) {
   form {
     left: 0;
     margin-left: 0;
-    width: 100%;
-  }
-}
+    width: 100%; } }
+
+/*# sourceMappingURL=app.css.map */
