--- a/dev/sass/app.scss
+++ b/dev/sass/app.scss
@@ -44,14 +44,17 @@
 }
 
 .training-section {
-  height: 200px;
+  height: 100%;
+  max-height: 200px;
+  min-height: initial;
   overflow-x: hidden;
   overflow-y: hidden;
   width: 100%;
   margin-bottom: 5px;
 
   &.transition {
-    @include transition(height, 1s);
+    @include transition(max-height, 1s);
+    @include transition(min-height, 1s);
   }
 }
 
